--- a/SPMS/Areas/Students/Views/_ViewImports.cshtml
+++ b/SPMS/Areas/Students/Views/_ViewImports.cshtml
@@ -2,5 +2,9 @@
 @using CPMS.Models
 @using CPMS.Helpers
 @using CPMS.Extension
+@using Domain.Entities
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@inherits CPMS.Helpers.BaseViewPage<TModel>
+
