--- a/SPMS/Views/Shared/_Layout.cshtml
+++ b/SPMS/Views/Shared/_Layout.cshtml
@@ -64,8 +64,7 @@
 	<script src="~/assets/js/custom.min.js"></script>
 	<script src="~/assets/js/dlabnav-init.js"></script>
 	<script src="~/assets/js/demo.js"></script>
-	<script src="~/assets/js/styleSwitcher.js"></script>
-	<script>
+@*	<script>
 		function cardsCenter()
 		{
 			
@@ -111,7 +110,7 @@
 			}, 1000); 
 		});
 		
-	</script>
+	</script>*@
 
 	@await RenderSectionAsync("Scripts", required: false)
 </body>
