--- a/SPMS/Views/Shared/_Sidebar.cshtml
+++ b/SPMS/Views/Shared/_Sidebar.cshtml
@@ -20,8 +20,8 @@
 					<span class="nav-text">Project</span>
 				</a>
 				<ul aria-expanded="false">
-					<li><a asp-controller="Project" asp-action="ProjectTopic">Submit Project Topic</a></li>
-					<li><a asp-controller="Project" asp-action="Chapter1">Project Details</a></li>
+					<li><a asp-controller="Project" asp-action="Index">Submit Project Topic</a></li>
+					<li><a asp-controller="Project" asp-action="Chap1">Project Details</a></li>
 
 
 					<li>
