--- a/SPMS/Views/Shared/_ProjectstudentHeader.cshtml
+++ b/SPMS/Views/Shared/_ProjectstudentHeader.cshtml
@@ -5,7 +5,7 @@
 			<div class="collapse navbar-collapse justify-content-between">
 				<div class="header-left">
 					<div class="dashboard_bar">
-						Project - Milestone
+						Project-Students
 					</div>
 				</div>
 				<ul class="navbar-nav header-right">
