--- a/SPMS/Views/Shared/_Sidebar.cshtml
+++ b/SPMS/Views/Shared/_Sidebar.cshtml
@@ -1,40 +1,119 @@
 ﻿
-<div class="dlabnav">
-	<div class="dlabnav-scroll">
-		<ul class="metismenu" id="menu">
-			<li>
-				<a class="has-arrow " href="javascript:void()" aria-expanded="false">
-					<i class="fas fa-home"></i>
-					<span class="nav-text">Dashboard</span>
-				</a>
-				<ul aria-expanded="false">
-					<li><a asp-controller="Dashboard" asp-action="Profile">Profile</a></li>
-					<li><a href="message.html">Messages</a></li>
-				</ul>
-
-			</li>
-
-			<li>
-				<a class="has-arrow " href="javascript:void()" aria-expanded="false">
-					<i class="fas fa-info-circle"></i>
-					<span class="nav-text">Project</span>
-				</a>
-				<ul aria-expanded="false">
-					<li><a asp-controller="Project" asp-action="Index">Submit Project Topic</a></li>
-					<li><a asp-controller="Project" asp-action="Chap1">Project Details</a></li>
 
 
-					<li>
-						<ul aria-expanded="false">
-						</ul>
-					</li>
-				</ul>
-			</li>
-		</ul>
+@if (User.IsInRole("Admin"))
+{
+	<div class="dlabnav">
+		<div class="dlabnav-scroll">
+			<ul class="metismenu" id="menu">
+				<li>
+					<a class="has-arrow " href="javascript:void()" aria-expanded="false">
+						<i class="fas fa-home"></i>
+						<span class="nav-text">Dashboard</span>
+					</a>
+					<ul aria-expanded="false">
+						<li><a asp-controller="Dashboard" asp-action="Profile">Profile</a></li>
+					</ul>
 
-		<div class="copyright">
-			<p><strong>Capstone Project Management</strong> © @DateTime.Now.Year All Rights Reserved</p>
-			<p class="fs-12">Made with <span class="heart"></span> </p>
+				</li>
+
+				<li>
+					<a class="has-arrow " href="javascript:void()" aria-expanded="false">
+						<i class="fas fa-info-circle"></i>
+						<span class="nav-text">Manage</span>
+					</a>
+					<ul aria-expanded="false">
+						<li><a asp-controller="Project" asp-action="Index">Department</a></li>
+
+
+						<li>
+							<ul aria-expanded="false">
+							</ul>
+						</li>
+					</ul>
+				</li>
+			</ul>
 		</div>
 	</div>
-</div>
+
+}
+else if (User.IsInRole("Supervisor"))
+{
+	<div class="dlabnav">
+		<div class="dlabnav-scroll">
+			<ul class="metismenu" id="menu">
+				<li>
+					<a class="has-arrow " href="javascript:void()" aria-expanded="false">
+						<i class="fas fa-home"></i>
+						<span class="nav-text">Dashboard</span>
+					</a>
+					<ul aria-expanded="false">
+						<li><a asp-controller="Dashboard" asp-action="Profile">Profile</a></li>
+					</ul>
+
+				</li>
+
+				<li>
+					<a class="has-arrow " href="javascript:void()" aria-expanded="false">
+						<i class="fas fa-info-circle"></i>
+						<span class="nav-text">Project</span>
+					</a>
+					<ul aria-expanded="false">
+						<li><a asp-controller="Project" asp-action="PStudent">Project Students</a></li>
+						<li><a asp-controller="Project" asp-action="Proposal">Proposals</a></li>
+						<li>
+							<ul aria-expanded="false">
+							</ul>
+						</li>
+					</ul>
+				</li>
+			</ul>
+
+
+		</div>
+	</div>
+}
+else if (User.IsInRole("Student"))
+{
+	<div class="dlabnav">
+		<div class="dlabnav-scroll">
+			<ul class="metismenu" id="menu">
+				<li>
+					<a class="has-arrow " href="javascript:void()" aria-expanded="false">
+						<i class="fas fa-home"></i>
+						<span class="nav-text">Dashboard</span>
+					</a>
+					<ul aria-expanded="false">
+						<li><a asp-controller="Dashboard" asp-action="Profile">Profile</a></li>
+						<li><a href="message.html">Messages</a></li>
+					</ul>
+
+				</li>
+
+				<li>
+					<a class="has-arrow " href="javascript:void()" aria-expanded="false">
+						<i class="fas fa-info-circle"></i>
+						<span class="nav-text">Project</span>
+					</a>
+					<ul aria-expanded="false">
+						<li><a asp-controller="Project" asp-action="Index">Submit Project Topic</a></li>
+						<li><a asp-controller="Project" asp-action="Chap1">Project Details</a></li>
+
+
+						<li>
+							<ul aria-expanded="false">
+							</ul>
+						</li>
+					</ul>
+				</li>
+			</ul>
+
+			
+		</div>
+	</div>
+
+}
+else
+{
+
+}
