supervisor accept/reject proposals

--- a/SPMS/Views/Shared/_Sidebar.cshtml
+++ b/SPMS/Views/Shared/_Sidebar.cshtml
@@ -96,10 +96,8 @@ else if (User.IsInRole("Student"))
 						<span class="nav-text">Project</span>
 					</a>
 					<ul aria-expanded="false">
-						<li><a asp-controller="Project" asp-action="Index">Submit Project Topic</a></li>
-						<li><a asp-controller="Project" asp-action="Chap1">Project Details</a></li>
-
-
+						<li><a asp-controller="Project" asp-action="Index">Proposal</a></li>
+						<li><a asp-controller="Project" asp-action="Milestone">Chapters</a></li>
 						<li>
 							<ul aria-expanded="false">
 							</ul>
