--- a/SPMS/Areas/Supervisors/Views/Project/Proposal.cshtml
+++ b/SPMS/Areas/Supervisors/Views/Project/Proposal.cshtml
@@ -47,6 +47,28 @@
 													<td class="py-2">@item.Topic</td>
 													<td>
 														<a  data-bs-toggle="modal" data-bs-target=".bd-example-modal-lg">View Proposal</a>
+														<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-hidden="true">
+															<div class="modal-dialog modal-lg">
+																<div class="modal-content">
+																	<div class="modal-header">
+																		<h5 class="modal-title">Project Proposal</h5>
+																		<button type="button" class="btn-close" data-bs-dismiss="modal">
+																		</button>
+																	</div>
+																	<div class="modal-body">
+																		<p id="text">
+																			@_file.ReadFile(item.FileUrl)
+																		</p>
+																	</div>
+																	<div class="modal-footer">
+																		<button type="button" class="btn btn-danger light" data-bs-dismiss="modal">Close</button>
+																		<button type="button" class="btn btn-primary">Approve</button>
+																		<button type="button" class="btn btn-primary">Reject</button>
+
+																	</div>
+																</div>
+															</div>
+														</div>
 													</td>
 													<td class="py-2 text-end">
 															<span class="badge badge-warning">@item.Status<span class="ms-1 fas fa-stream"></span></span>
@@ -54,35 +76,11 @@
 													
 													<td>
 														<div class="d-flex">
-															<a class="btn btn-primary shadow btn-xs sharp me-1"><i class="fas fa-check"></i></a>
-															<a asp-action="Delete" asp-route-id="@item.ProjectId" class="btn btn-danger shadow btn-xs sharp"><i class="fa fa-times"></i></a>
+															<a asp-action="Status" asp-route-ProjectId="@item.ProjectId" asp-route-item="Approved" class="btn btn-primary shadow btn-xs sharp me-1"><i class="fas fa-check"></i></a>
+													<a asp-action="Status" asp-route-ProjectId="@item.ProjectId" asp-route-item="Rejected" class="btn btn-danger shadow btn-xs sharp"><i class="fa fa-times"></i></a>
 														</div>
 													</td>
 												</tr>
-
-												<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-hidden="true">
-													<div class="modal-dialog modal-lg">
-														<div class="modal-content">
-															<div class="modal-header">
-																<h5 class="modal-title">Project Proposal</h5>
-																<button type="button" class="btn-close" data-bs-dismiss="modal">
-																</button>
-															</div>
-															<div class="modal-body">
-																<p id="text">
-																	 @_file.ReadFile(item.FileUrl);
-																</p>
-															</div>
-															<div class="modal-footer">
-																<button type="button" class="btn btn-danger light" data-bs-dismiss="modal">Close</button>
-																<button type="button" class="btn btn-primary">Approve</button>
-																<button type="button" class="btn btn-primary">Reject</button>
-
-															</div>
-														</div>
-													</div>
-												</div>
-
 											}
 										</tbody>
 									</table>
@@ -97,7 +95,7 @@
 
 
 
-
+@*
 <script type="text/javascript">
 	$(function () {
 		$('#readFile').click(function () {
@@ -110,4 +108,4 @@
 			});
 		});
 	});
-</script>
+</script>*@
