--- a/SPMS/Views/Shared/_Sidebar.cshtml
+++ b/SPMS/Views/Shared/_Sidebar.cshtml
@@ -98,6 +98,8 @@ else if (User.IsInRole("Student"))
 					<ul aria-expanded="false">
 						<li><a asp-controller="Project" asp-action="Index">Proposal</a></li>
 						<li><a asp-controller="Project" asp-action="Milestone">Chapters</a></li>
+						<li><a asp-controller="Project" asp-action="Detials">Project Details</a></li>
+
 						<li>
 							<ul aria-expanded="false">
 							</ul>
