--- a/SPMS/Areas/Students/Views/Project/Milestone.cshtml
+++ b/SPMS/Areas/Students/Views/Project/Milestone.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
 	ViewData["Title"] = "Milestone";
 	var proposal = ViewData["projectproposal"] as IEnumerable<Project>;
 	Project pjt = new Project();
@@ -10,79 +9,86 @@
 <Partial name="_MilestoneHeader" />
 <Partial name="_Sidebar" />
 
- <div class="content-body">
-			<div class="container-fluid">
-				<div class="row page-titles">
-					<ol class="breadcrumb">
-						<li class="breadcrumb-item active"><a href="javascript:void(0)">Project</a></li>
-						<li class="breadcrumb-item"><a href="javascript:void(0)">proposal</a></li>
-					</ol>
-				</div>
-				<!-- row -->
+<div class="content-body">
+	<div class="container-fluid">
+		<div class="row page-titles">
+			<ol class="breadcrumb">
+				<li class="breadcrumb-item active"><a href="javascript:void(0)">Project</a></li>
+				<li class="breadcrumb-item"><a href="javascript:void(0)">Milestone</a></li>
+			</ol>
+		</div>
+		<!-- row -->
 
-				<div class="row">
-					<div class="col-lg-12">
-						<div class="card">
-							<div class="card-header">
-								<h4 class="card-title">Project Topic</h4>
-								<button type="button" class="btn btn-primary mb-2" data-bs-toggle="modal" data-bs-target="#basicModal">Add Topic</button>
-							</div>
-							<div class="card-body">
-								<div class="table-responsive">
-									<table class="table table-responsive-md">
-										<thead>
-											<tr>
-												<th><strong>Matric</strong></th>
-												<th><strong>Topic</strong></th>
-												<th><strong>Proposal</strong></th>
-												<th><strong>Status</strong></th>
-												<th><strong>Remark</strong></th>
-												<th><strong></strong></th>
-											</tr>
-										</thead>
-										<tbody>
-											@foreach (var item in @proposal)
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="card">
+					<div class="card-header">
+						<h4 class="card-title">Project Topic</h4>
+						@if(proposal.Any(c => c.Status.Equals("Approved")))
+						{
+							<button type="button" class="btn btn-primary mb-2" data-bs-toggle="modal" data-bs-target="#basicModal">Add Chapter</button>
+						}
+						else
+						{
+							<button type="button" class="btn btn-primary mb-2" disabled data-bs-toggle="modal"  data-bs-target="#basicModal">Add Chapter</button>
+						}
+					</div>
+					<div class="card-body">
+						<div class="table-responsive">
+							<table class="table table-responsive-md">
+								<thead>
+									<tr>
+										<th><strong>Matric</strong></th>
+										<th><strong>Chapter</strong></th>
+										<th><strong>Document</strong></th>
+										<th><strong>Status</strong></th>
+										<th><strong>Remark</strong></th>
+										<th><strong></strong></th>
+									</tr>
+								</thead>
+								<tbody>
+									@foreach (var item in @proposal)
+									{
+										<tr>
+
+											<td>@item.Matric</td>
+											<td>@item.Chapter</td>
+											<td><a href="@item.FileUrl" download>Dowload File</a></td>
+											@if (@item.Status.Equals("Approved"))
 											{
-												<tr>
-												
-													<td>@item.Matric</td>
-													<td>@item.Topic</td>
-													<td><a href="@item.FileUrl" download>Dowload File</a></td>
-													@if (@item.Status.Equals("Approved"))
-													{
-														<td><div class="d-flex align-items-center"><i class="fa fa-circle text-success me-1"></i> @item.Status</div></td>
-													}
-													else if (@item.Status.Equals("Rejected"))
-													{
-														<td><div class="d-flex align-items-center"><i class="fa fa-circle text-danger me-1"></i> @item.Status</div></td>
-													}
-													else 
-													{
-														<td><div class="d-flex align-items-center"><i class="fa fa-circle text-warning me-1"></i>  @item.Status</div></td>
-													}
-													<td>
-														<a href="" data-bs-toggle="modal" data-bs-target="#remarkModal_@item.ProjectId"> View Remark </a>
-														<div class="modal fade" id="remarkModal_@item.ProjectId">
-															<div class="modal-dialog modal-dialog-centered" role="document">
-																<div class="modal-content">
-																	<div class="modal-header">
-																		<h5 class="modal-title">Remark</h5>
-																		<button type="button" class="btn-close" data-bs-dismiss="modal">
-																		</button>
-																	</div>
-																	<div class="modal-body">
-																		<p>@item.Remark</p>
-																	</div>
-																	<div class="modal-footer">
-																		<button type="button" class="btn btn-danger light" data-bs-dismiss="modal">Close</button>
-																		<button type="button" class="btn btn-primary">Save changes</button>
-																	</div>
-																</div>
+												<td><div class="d-flex align-items-center"><i class="fa fa-circle text-success me-1"></i> @item.Status</div></td>
+											}
+											else if (@item.Status.Equals("Rejected"))
+											{
+												<td><div class="d-flex align-items-center"><i class="fa fa-circle text-danger me-1"></i> @item.Status</div></td>
+											}
+											else
+											{
+												<td><div class="d-flex align-items-center"><i class="fa fa-circle text-warning me-1"></i>  @item.Status</div></td>
+											}
+											<td>
+												<a href="" data-bs-toggle="modal" data-bs-target="#remarkModal_@item.ProjectId"> View Remark </a>
+												<div class="modal fade" id="remarkModal_@item.ProjectId">
+													<div class="modal-dialog modal-dialog-centered" role="document">
+														<div class="modal-content">
+															<div class="modal-header">
+																<h5 class="modal-title">Remark</h5>
+																<button type="button" class="btn-close" data-bs-dismiss="modal">
+																</button>
+															</div>
+															<div class="modal-body">
+																<p>@item.Remark</p>
+															</div>
+															<div class="modal-footer">
+																<button type="button" class="btn btn-danger light" data-bs-dismiss="modal">Close</button>
+																<button type="button" class="btn btn-primary">Save changes</button>
 															</div>
 														</div>
-													</td>
-													<td>
-														<div class="d-flex">
+													</div>
+												</div>
+											</td>
+											<td>
+												<div class="d-flex">
 													<a data-bs-toggle="modal" data-bs-target="#basicModal_@item.ProjectId" class="btn btn-primary shadow btn-xs sharp me-1"><i class="fas fa-pencil-alt"></i></a>
 													<div class="modal fade" id="basicModal_@item.ProjectId">
 														<div class="modal-dialog" role="document">
@@ -122,27 +128,24 @@
 															</div>
 														</div>
 													</div>
-													@if (@item.Status != "Approved")
-													{
-															<a asp-action="Delete" asp-route-id="@item.ProjectId" class="btn btn-danger shadow btn-xs sharp"><i class="fa fa-trash"></i></a>
-													}
-														</div>
-													</td>
-												
-												</tr>
 
-												<!-- Modal -->
+													<a asp-action="Delete" asp-route-id="@item.ProjectId" class="btn btn-danger shadow btn-xs sharp"><i class="fa fa-trash"></i></a>
+												</div>
+											</td>
 
-											}
-										</tbody>
-									</table>
-								</div>
-							</div>
+										</tr>
+
+										<!-- Modal -->
+									}
+								</tbody>
+							</table>
 						</div>
 					</div>
-					</div>
-
+				</div>
 			</div>
+		</div>
+
+	</div>
 </div>
 
 
@@ -152,7 +155,7 @@
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title">Add Project Topic</h5>
+				<h5 class="modal-title">Add Project Chapter</h5>
 				<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
 			</div>
 			<div class="modal-body">
@@ -169,8 +172,8 @@
 						</div>
 						<div class="col-lg-12">
 							<div class="mb-3">
-								<label class="text-black font-w600 form-label">Upload Proposal <span class="required">*</span></label>
-								<input asp-for="@pjt.File" name="File" type="file" accept=".txt, .doc,.docs,.pdf" placeholder="Topic" required class="form-file-input form-control">
+								<label class="text-black font-w600 form-label">Upload File <span class="required">*</span></label>
+								<input asp-for="@pjt.File" name="File" type="file" accept=".txt, .docx, .doc, .docs,.pdf" required class="form-file-input form-control">
 
 							</div>
 						</div>
