--- a/SPMS/Views/Account/Login.cshtml
+++ b/SPMS/Views/Account/Login.cshtml
@@ -14,7 +14,7 @@
 							<div class="col-xl-12">
 								<div class="auth-form">
 									<div class="text-center mb-3">
-										<a asp-action="Index"><img src="~/assets/images/logo-full.png" alt=""></a>
+									<a asp-action="Index"><img src="~/assets/images/logofull.png" alt=""></a>
 									</div>
 									<h4 class="text-center mb-4">Sign in your account</h4>
 									<div asp-validation-summary="ModelOnly" class="text-danger"></div>
