--- a/SPMS/Views/Shared/_Layout.cshtml
+++ b/SPMS/Views/Shared/_Layout.cshtml
@@ -7,22 +7,26 @@
 	<meta name="author" content="" />
 	<meta name="robots" content="" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Workload :Capstone Project Management System" />
-	<meta property="og:title" content="Workload : Capstone Project Management System" />
-	<meta property="og:description" content="CPMS : Capstone Project Management System" />
+	<meta name="description" content="Workload :FPE Student Project Management System" />
+	<meta property="og:title" content="Workload : FPE Student Project Management System" />
+	<meta property="og:description" content="CPMS : FPE Student Project Management System" />
 	<meta property="og:image" content="" />
 	<meta name="format-detection" content="telephone=no">
 	
 	<!-- PAGE TITLE HERE -->
-	<title>Capstone Project Management</title>
+	<title>FPE Student Project Management</title>
 	
 	<!-- FAVICONS ICON -->
-	<link rel="shortcut icon" type="image/png" href="~/assets/images/favicon.png" />
+	<link rel="shortcut icon" type="image/png" href="~/favico.png" />
 	<link href="~/assets/vendor/jquery-nice-select/css/nice-select.css" rel="stylesheet">
 	<link href="~/assets/vendor/owl-carousel/owl.carousel.css" rel="stylesheet">
 	
 	<!-- Style css -->
 	<link href="~/assets/css/style.css" rel="stylesheet">
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/4.0.0/jquery.validate.unobtrusive.js"></script>
 	
 </head>
 <body>
