--- a/SPMS/Areas/Students/Views/Project/Index.cshtml
+++ b/SPMS/Areas/Students/Views/Project/Index.cshtml
@@ -26,6 +26,10 @@
 							<div class="card-header">
 								<h4 class="card-title">Project Topic</h4>
 								<button type="button" class="btn btn-primary mb-2" data-bs-toggle="modal" data-bs-target="#basicModal">Add Topic</button>
+								<div class=”text-center”>
+									 <h1 class=”display-4″>Welcome</h1>
+									 <div id=”articleList”></div>
+								</div>
 							</div>
 							<div class="card-body">
 								<div class="table-responsive">
@@ -185,3 +189,11 @@
 	</div>
 </div>
 
+<script>
+		 function ready() {
+	}
+		 //random number between 1 and 100 for demo
+		 var userId = Math.floor((Math.random() * 100) + 1); document.addEventListener(“DOMContentLoaded”, ready);
+</script>
+<script src=”~/lib/signalr/dist/browser/signalr.js”></script>
+<script src=”~/js/notification.js”></script>
